# internal/app/api/sales.go
@@ -1,6 +1,11 @@
 package api
 
-import "github.com/gin-gonic/gin"
+import (
+	"avito2022/internal/app/models"
+	"avito2022/internal/app/service/balance_holder"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
 
 type Reserve struct {
 	OrderID     uint64  `json:"order_id"`
@@ -18,7 +23,35 @@ type Reserve struct {
 // @Accept json
 // @Param data body Reserve true "Входные параметры"
 // @Success 200
-// @Router /balance/reserve_money [post]
+// @Router /sales/reserve_money [post]
 func (api *Api) ReserveMoney(ctx *gin.Context) {
+	var reserve Reserve
 
+	if err := ctx.BindJSON(&reserve); err != nil {
+		ctx.AbortWithStatus(http.StatusBadRequest)
+		return
+	}
+
+	err := api.balanceHolder.ReserveMoney(ctx, models.HolderOperation{
+		OrderID:     reserve.OrderID,
+		ServiceID:   reserve.ServiceID,
+		UserID:      reserve.UserID,
+		ServiceName: reserve.ServiceName,
+		Cost:        reserve.Cost,
+	})
+
+	if err == balance_holder.ErrInvalidCost {
+		ctx.AbortWithStatus(http.StatusBadRequest)
+		return
+	}
+	if err == balance_holder.ErrInsufficientBalance {
+		ctx.AbortWithStatus(http.StatusBadRequest)
+		return
+	}
+	if err != nil {
+		ctx.AbortWithStatus(http.StatusInternalServerError)
+		return
+	}
+
+	ctx.AbortWithStatus(http.StatusOK)
 }
